[tool.poetry]
name = "pprl-gecko-examples"
version = "0.1.0"
description = ""
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
packages = [{ include = "gecko_examples" }]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gecko = "gecko_examples.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gecko-syndata = "^0.3.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
